welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:11: error: ';' expected but 'else' found.
			else droite(); return false
                        ^SnakeBuggle:18: error: ';' expected but 'else' found.
			else gauche(); return false
                        ^